// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateVue2ComponentCode > matches snapshot 1`] = `
"const __svgOriginal = "<svg viewBox=\\"0 0 24 24\\"><path fill=\\"#000\\" d=\\"M0 0\\" /></svg>";
let __svgColorized = null;
const __defaultSize = 24;
const __defaultReplaceColors = true;
const __baseStyle = { display: "inline-block", lineHeight: "0" };
const __sanitizeTitle = (title) => (title ? String(title).replace(/[<>]/g, "") : "");
const __injectTitle = (svg, title) => svg.replace(/<svg\\b[^>]*>/i, (m) => m + "<title>" + title + "</title>");
const __replaceColorAttr = (svg, attr) => {
  const regex = new RegExp(\`\\\\s\${attr}=("|')?([^"'\\\\s>]+)\\\\1\`, "gi");
  return svg.replace(regex, (match, quote, value) => {
    if (String(value).toLowerCase() === "none") {
      return match;
    }
    const q = quote || '"';
    return \` \${attr}=\${q}currentColor\${q}\`;
  });
};
const __toCurrentColor = (svg) => __replaceColorAttr(__replaceColorAttr(svg, "fill"), "stroke");
const __getSvg = (useOriginal) => {
  if (useOriginal) return __svgOriginal;
  if (__svgColorized) return __svgColorized;
  __svgColorized = __toCurrentColor(__svgOriginal);
  return __svgColorized;
};
const __resolveSvg = (title, useOriginal) => {
  const safe = __sanitizeTitle(title);
  const base = __getSvg(Boolean(useOriginal));
  return safe ? __injectTitle(base, safe) : base;
};
const __hasSizeClass = (klass) => {
  if (!klass) return false;
  if (typeof klass === "string") return /(^|\\s)(w|h)-/.test(klass);
  if (Array.isArray(klass)) return klass.some(__hasSizeClass);
  if (typeof klass === "object") return Object.keys(klass).some((key) => klass[key] && /(^|\\s)(w|h)-/.test(key));
  return false;
};

export default {
  name: "SmartSvgIcon",
  functional: true,
  props: {
    size: { type: [Number, String] },
    title: { type: String, default: "" },
    decorative: { type: Boolean, default: true },
    replaceColors: { type: Boolean, default: __defaultReplaceColors }
  },
  render(h, ctx) {
    const props = ctx.props || {};
    const data = ctx.data || {};
    const attrs = data.attrs || {};
    const sizeProp = props.size;
    const sizeValue = sizeProp == null ? __defaultSize : sizeProp;
    const sizeCss = typeof sizeValue === "number" ? sizeValue + "px" : sizeValue;
    const hasTitle = Boolean(props.title);
    const hasSizeClass = __hasSizeClass(data.class) || __hasSizeClass(data.staticClass);
    const shouldApplySize = !(sizeProp == null && hasSizeClass);
    const sizeStyle = shouldApplySize ? { width: sizeCss, height: sizeCss } : {};
    const style = [__baseStyle, sizeStyle, data.style, attrs.style];
    const ariaHidden = attrs["aria-hidden"] != null ? attrs["aria-hidden"] : (props.decorative && !hasTitle ? "true" : undefined);
    const role = attrs.role != null ? attrs.role : (!props.decorative && hasTitle ? "img" : undefined);
    const ariaLabel = attrs["aria-label"] != null ? attrs["aria-label"] : (!props.decorative && hasTitle ? props.title : undefined);
    const useOriginal = props.replaceColors === false;
    const mergedAttrs = { ...attrs };
    if (ariaHidden !== undefined) mergedAttrs["aria-hidden"] = ariaHidden;
    if (role !== undefined) mergedAttrs.role = role;
    if (ariaLabel !== undefined) mergedAttrs["aria-label"] = ariaLabel;

    return h("span", {
      ...data,
      attrs: mergedAttrs,
      style,
      domProps: { ...(data.domProps || {}), innerHTML: __resolveSvg(props.title, useOriginal) }
    });
  }
};"
`;

exports[`generateVue3ComponentCode > matches snapshot 1`] = `
"import { defineComponent, h } from "vue";

const __svgOriginal = "<svg viewBox=\\"0 0 24 24\\"><path fill=\\"#000\\" d=\\"M0 0\\" /></svg>";
let __svgColorized = null;
const __defaultSize = 24;
const __defaultReplaceColors = true;
const __baseStyle = { display: "inline-block", lineHeight: "0" };
const __sanitizeTitle = (title) => (title ? String(title).replace(/[<>]/g, "") : "");
const __injectTitle = (svg, title) => svg.replace(/<svg\\b[^>]*>/i, (m) => m + "<title>" + title + "</title>");
const __replaceColorAttr = (svg, attr) => {
  const regex = new RegExp(\`\\\\s\${attr}=("|')?([^"'\\\\s>]+)\\\\1\`, "gi");
  return svg.replace(regex, (match, quote, value) => {
    if (String(value).toLowerCase() === "none") {
      return match;
    }
    const q = quote || '"';
    return \` \${attr}=\${q}currentColor\${q}\`;
  });
};
const __toCurrentColor = (svg) => __replaceColorAttr(__replaceColorAttr(svg, "fill"), "stroke");
const __getSvg = (useOriginal) => {
  if (useOriginal) return __svgOriginal;
  if (__svgColorized) return __svgColorized;
  __svgColorized = __toCurrentColor(__svgOriginal);
  return __svgColorized;
};
const __resolveSvg = (title, useOriginal) => {
  const safe = __sanitizeTitle(title);
  const base = __getSvg(Boolean(useOriginal));
  return safe ? __injectTitle(base, safe) : base;
};
const __hasSizeClass = (klass) => {
  if (!klass) return false;
  if (typeof klass === "string") return /(^|\\s)(w|h)-/.test(klass);
  if (Array.isArray(klass)) return klass.some(__hasSizeClass);
  if (typeof klass === "object") return Object.keys(klass).some((key) => klass[key] && /(^|\\s)(w|h)-/.test(key));
  return false;
};

export default defineComponent({
  name: "SmartSvgIcon",
  inheritAttrs: false,
  props: {
    size: { type: [Number, String], default: undefined },
    title: { type: String, default: "" },
    decorative: { type: Boolean, default: true },
    replaceColors: { type: Boolean, default: __defaultReplaceColors }
  },
  setup(props, { attrs }) {
    return () => {
      const sizeProp = props.size;
      const sizeValue = sizeProp == null ? __defaultSize : sizeProp;
      const sizeCss = typeof sizeValue === "number" ? sizeValue + "px" : sizeValue;
      const hasTitle = Boolean(props.title);
      const attrsSafe = attrs || {};
      const shouldApplySize = !(sizeProp == null && __hasSizeClass(attrsSafe.class));
      const sizeStyle = shouldApplySize ? { width: sizeCss, height: sizeCss } : {};
      const style = [__baseStyle, sizeStyle, attrsSafe.style];
      const ariaHidden = attrsSafe["aria-hidden"] ?? (props.decorative && !hasTitle ? "true" : undefined);
      const role = attrsSafe.role ?? (!props.decorative && hasTitle ? "img" : undefined);
      const ariaLabel = attrsSafe["aria-label"] ?? (!props.decorative && hasTitle ? props.title : undefined);
      const useOriginal = props.replaceColors === false;

      return h("span", {
        ...attrsSafe,
        style,
        "aria-hidden": ariaHidden,
        role,
        "aria-label": ariaLabel,
        innerHTML: __resolveSvg(props.title, useOriginal)
      });
    };
  }
});"
`;
